# L0-Sybil-Report-Checker

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: client.py  settings.py  sybil_checker.py  utils.py
src/cache/: redis.py  serialization.py
src/core/: config.py  loader.py
src/database/: init.py  models.py
src/github_client/: client.py  types.py
