[tool.poetry]
name = "l0-sybil-report-checker"
version = "0.1.0"
description = ""
authors = ["zrxmax <“zrxmax@icloud.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
curl-cffi = "^0.6.4"
pydantic-settings = "^2.2.1"
msgspec = "^0.18.6"
yarl = "^1.9.4"
beanie = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
