[tool.poetry]
name = "l0-sybil-report-checker"
version = "0.1.0"
description = ""
authors = ["zrxmax <“zrxmax@icloud.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
curl-cffi = "^0.6.4"
pydantic-settings = "^2.2.1"
msgspec = "^0.18.6"
yarl = "^1.9.4"
redis = "^5.0.4"
loguru = "^0.7.2"
cachetools = "^5.3.3"
telethon = "^1.35.0"
pysocks = "^1.7.1"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
